# bmp_reader_TA

./: CMakeLists.txt  README.md  bmp_image.cpp  bmp_image.h  main.cpp
